--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,14 @@
+<!DOCTYPE html>
 <html>
-  <body>
-    <h1>TEST2</h1>
+  <head>
+    <title>Moodledoodle</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body class="window">
+    <label class="switch">
+      <h2 style="color: white">Einschreibeschluessel automatisch ausfuellen</h2>
+      <input type="checkbox" />
+      <span class="slider round"></span>
+    </label>
   </body>
 </html>
