--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,43 @@
 <html>
   <head>
     <title>Moodledoodle</title>
+
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body class="window">
-    <label class="switch">
-      <h2 style="color: white">Einschreibeschluessel automatisch ausfuellen</h2>
-      <input type="checkbox" />
-      <span class="slider round"></span>
-    </label>
+  <body class="body">
+    <div class="container">
+      <h1>BETTERMOODLE</h1>
+      <div style="display: flex">
+        <label for="enrollmentkey" style="margin-right: 20px"
+          >Autofill Enrollment key</label
+        >
+        <label class="switch" style="display: flex">
+          <input type="checkbox" id="switchToggle" />
+          <span class="slider"></span>
+        </label>
+      </div>
+      <div>
+        <div style="display: flex">
+        <label for="enrollmentkey" style="margin-right: 70px"
+          >Link Checker</label
+        >
+        <label class="switch" style="display: flex">
+          <input type="checkbox" id="switchToggle" />
+          <span class="slider"></span>
+        </label>
+      </div>
+      <input
+        type="text"
+        id="enrollmentkey"
+        name="enrollmentkey"
+        placeholder="Enter enrollment key"
+      />
+    </div>
   </body>
 </html>
