--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,12 @@
       </div>
       <input
         type="text"
-        id="enrollmentkey"
+        id="enrollmentkeyinput"
         name="enrollmentkey"
         placeholder="Enter enrollment key"
       />
+      <div id="displayPredefinedText"></div>
+      <button class='button' id="saveButton">save</button>
     </div>
   </body>
 </html>
